<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/molitveFragment"
        android:enabled="true"
        android:icon="@drawable/pray_book_svg"
        android:title="@string/prayers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/search_svg"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/liveFragment"
        android:enabled="true"
        android:icon="@drawable/live_svg"
        android:title="@string/live_prayers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/heart_svg"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
</menu>